# traffic-light-stm32

./: .gitignore  CMakeLists.txt  README.md  git-conventional-commits.json
cmake/: arm-none-eabi-gcc.cmake
source/: CMakeLists.txt
source/traffic-light-stm32-cube-ide/: .mxproject  .project  traffic-light-stm32-cube-ide.ioc
source/traffic-light-stm32-cube-ide/Core/Src/: main.c
